--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -33,6 +33,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -e '.[test]'
+      env: 
+        ASTROPY_USE_SYSTEM_EXPAT: 1
+
     - name: Run tests
       run: pytest --pyargs padre_meddea --cov padre_meddea
       env:
