--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -31,7 +31,7 @@ jobs:
         #
     - name: Install dependencies
       run: |
-        echo "Installing dependencies $ASTROPY_USE_SYSTEM_ALL"
+        export ASTROPY_USE_SYSTEM_ALL=1
         python -m pip install --upgrade pip
         python -m pip install -e '.[test]'
       env: 
