--- a/.github/workflows/calibration.yml
+++ b/.github/workflows/calibration.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Run Lambda Docker Container
       run: |
-        docker run -d -p 9000:8080 -e USE_INSTRUMENT_TEST_DATA=True -e LAMBDA_ENVIRONMENT=DEVELOPMENT -e processing_function:latest
+        docker run -d -p 9000:8080 -e USE_INSTRUMENT_TEST_DATA=True -e LAMBDA_ENVIRONMENT=DEVELOPMENT processing_function:latest
         container_id=$(docker ps -qf "ancestor=processing_function:latest")
         echo "Container ID: $container_id"
 
